# reducer

./: CMakeLists.txt  setup.py
examples/: CMakeLists.txt  server.c
include/reducer/: reducer-admin.h  reducer-backend.h  reducer-client.h  reducer-common.h  reducer-metric.h  reducer-provider-handle.h  reducer-server.h
src/: CMakeLists.txt  admin.c  admin.h  bedrock-module.c  client.c  client.h  provider.c  provider.cc  provider.h  reducer-admin.pc.in  reducer-client.pc.in  reducer-config.cmake.in  reducer-server.pc.in  types.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  test-admin.c  test-client.c
